[package]
name = "embedder"
version = "0.4.0"
edition = "2021"
description = "Get basic website information with ease."
license = "MIT"
repository = "https://github.com/tascord/embedder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102" }
serde = { version = "1.0.228", features = ["derive"] }
async-process = { version = "2.5.0", optional = true }
fantoccini = { version = "0.22.1", optional = true }
which = { version = "8.0.2", optional = true }
lazy_static = { version = "1.5.0", optional = true }
futures = { version = "0.3.32", optional = true }
http = { version = "1.4.0", optional = true }
hyper = { version = "1.9.0", features = ["http1", "client"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["sync", "rt", "macros"] }
reqwest = "0.13.3"
scraper = "0.27.0"
url = "2.5.8"

[features]
default = []
driver = [
    "async-process",
    "fantoccini",
    "futures",
    "http",
    "http-body-util",
    "hyper",
    "lazy_static",
    "which",
]
container = [ "driver", "tokio/fs" ]
